scss/1-base/_global.scss
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

html {
    font-size: 16px;
}

body {
    background: $white;
    font-family: $font-overpass;
    line-height: 1.5;
    overflow-x: hidden;
}

// applied to body when menu is open
.no-scroll {
    overflow: hidden;
}

h1,
h2,
h3,
h4 {
    font-family: $font-ubuntu;
}

h1{
    font-size: to-rem(28);
}

a {
    color: inherit;
    text-decoration: none;

    &:visited {
        color: unset;
    }

    &:hover {
        cursor: pointer;
    }
}

.container-2 img {
    width: 50%;
}

